[fol-interpreter] Replace ISE with more specific exceptions